# ansible-eda-demo

./: .ansible-lint  .gitignore  .yamllint  Makefile  README.md  ansible.cfg  inventory.yaml  pyproject.toml  requirements.yml
inventories/demo/: inventory.yaml
playbooks/: create-toponodes.yaml  deploy-environment.yaml
playbooks/tasks/: authenticate.yml  interfaces.yml  nodeprofiles.yml  topolinks.yml  toponodes.yml  transaction.yml
vars/: nodeprofiles.yml
vars/topology/: topolinks.yml  toponodes.yml
