[project]
name = "ansible-eda-demo"
version = "0.1.0"
description = "Standalone uv-managed Ansible demo that provisions Nokia EDA TopoNodes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible-core>=2.17",
    "deepdiff>=8.5.0",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.7.1",
    "urllib3>=2.1.0",
]

[tool.uv]
dev-dependencies = []
